# redtail

./: README.md
models/dataset/: idsia_trails_dataset_digits.py  label_map.txt
models/nets/: python-layers.py
models/nets/ResNet/: TrailNet_SResNet-18.prototxt  caffe_srelu_resnet.py  srelu-resnet-18.prototxt
models/nets/YOLO/: yolo-relu.cfg
models/pretrained/: README.md  TrailNet_SResNet-18.prototxt  yolo-relu.prototxt
ros/configs/: rosconsole.config
ros/scripts/: jetson_ros_install.sh
stereoDNN/: .gitignore  CMakeLists.txt  README.md
stereoDNN/lib/: CMakeLists.txt  conv3d_plugin.cpp  conv3d_transpose_plugin.cpp  cost_volume_plugin.cpp  elu_plugin.cpp  internal_utils.cpp  internal_utils.h  kernels.cu  redtail_tensorrt_plugins.h  softargmax_plugin.cpp
stereoDNN/models/NVSmall/TensorFlow/: model-inference-1025x321-0.index
stereoDNN/models/NVTiny/TensorFlow/: model-inference-513x161-0.data-00000-of-00001  model-inference-513x161-0.index
stereoDNN/models/ResNet-18/TensorFlow/: model-inference-1025x321-0.index
stereoDNN/models/ResNet-18_2D/TensorFlow/: model-inference-513x257-0.data-00000-of-00001  model-inference-513x257-0.index
stereoDNN/sample_app/: CMakeLists.txt  main.cpp  networks.h  nvsmall_1025x321_net.cpp  nvtiny_513x161_net.cpp  resnet18_1025x321_net.cpp  resnet18_2D_513x257_net.cpp
stereoDNN/scripts/: data_converters.py  model_builder.py  model_nvsmall.py  model_resnet18.py  model_resnet18_2D.py  tensorrt_model_builder.py  test_data_generator.py
stereoDNN/tests/: CMakeLists.txt  tests_main.cpp
tools/camera_rig/scripts/: frameSplitter.py  videoParser.py
tools/camera_rig/widecam_mono_calibration/: CMakeLists.txt  Readme.txt  dirent.h  main.cpp  utils.h
tools/install/j120-tx2-patch/: README.md  tegra186-quill-p3310-1000-a00-00-base.dtb  tegra186-quill-p3310-1000-c03-00-base.dtb
tools/install/tx1-uart-patch/: README.md  tegra210-jetson-tx1-p2597-2180-a01-devkit.dtb
tools/simulation/: run_px4_docker.sh  run_redtail_docker.sh
tools/simulation/docker/: Dockerfile.kinetic  build_redtail_image.sh
tools/simulation/docker/scripts/: build_redtail.sh  init_workspace.sh
tools/tensorflow/docker/: build_redtail_tf_image.sh  run_redtail_tf_docker.sh  tf1.5.Dockerfile
tools/tensorflow/docker/scripts/: install_tensorflow.sh
